# Semantic3D-101

./: .gitignore  README.md  eval_metrics.txt  pyproject.toml
configs/: kpconv_semantic3d.yml  randlanet_semantic3d.yml
src/: eval.py  preprocess_semantic3d.py  semantic3d_wrapper.py  test_inference.py  train.py
src/processing/: convert_to_ply.py  plot_labels_histogram.py
