[project]
name = "skysnap-semantic3d"
version = "0.1.0"
description = ""
authors = [
    {name = "Oskar Zaleski", email = "o.zaleski1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"

[tool.poetry]
packages = [{include = "skysnap_semantic3d", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
open3d = "0.18.0" # Keeping Open3D 0.18.0 (which expects CUDA 11.7)
tensorboard = "*"
torch = {version = "==2.0.0", source = "pytorch_cu117"}
torchvision = {version = "==0.15.1", source = "pytorch_cu117"}
matplotlib = "^3.10.1"
pandas = "<2.2.0"
scikit-learn = "^1.6.1"
pyyaml = "^6.0.2"
addict = "^2.4.0"
tqdm = "^4.67.1"

[[tool.poetry.source]]
name = "pytorch_cu117"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"